src/components/footer/footer.css
.footer {
  background-color: #131515;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.footer_moonvalley_grid {
  display: flex;
  flex-wrap: wrap;
  margin: 0 auto;
  max-width: 1080px;
  text-align: start;
  color: #a3a7a7;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.footer_block {
  display: flex;
  flex-direction: column;
  align-items: start;
  min-width: 300px;
  flex-grow: 1;
  flex-shrink: 0;
  flex-basis: 0;
}

.footer_section_title h1 {
  font-size: 18px;
  margin-bottom: 14px;
}

.footers_footer {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: rgb(170, 170, 170);
  background-color: #0a0b0b;
}

.footers_footer ul {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 30px;
  color: rgb(143, 143, 143);
  font-size: 13.725px;
}

.footers_footer ul a {
  color: rgb(143, 143, 143);
  font-weight: 350;
  font-size: 13.725px;
}

.footers_footer li {
  list-style: initial;
}

.footer_wrapper {
  height: 100%;
}

.footer_logo {
  width: 80px;
  fill: white;
  padding-top: 10px;
  padding-bottom: 10px;
}

.flex {
  gap: 10px;
}

.about ul a {
  color: #738282;
  font-weight: 300;
}

.about ul {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.about ul li {
  font-weight: 300;
}

.about ul a:hover {
  color: white;
}

.footer_block span {
  line-height: 1.5;
}

.footer_block form {
  display: flex;
  flex-direction: column;
  gap: 15px;
  margin-top: 10px;
}

.footer_block input {
  width: 80%;
  height: 30px;
  padding: 10px;
  font-family: Onest;
  font-weight: 600;
  border-radius: 8px;
  border: none;
  outline: none;
}

.footer_block input:focus {
  outline: 2px solid var(--main-color);
  border-radius: 6px;
}

.iconcard {
  width: 50px;
}

.footer_block.socials a {
  color: white;
  padding: 0.5rem;
  border-radius: 8px;
  transition: all 0.1s ease-in-out;
}

.socials a:hover {
  background-color: var(--main-color);
}

.socials a {
  display: flex;
}

.socials ul {
  display: flex;
  gap: 30px;
}

.footer_moonvalley_grid_mobile {
  visibility: hidden;
  opacity: 0;
  display: none;
  height: 0px;
}

.footers_footer_mobile {
  opacity: 0;
  visibility: hidden;
  height: 0px;
  display: none;
}

@media (width <=766px) {
  .footer_moonvalley_grid {
    visibility: hidden;
    display: none;
    opacity: 0;
    height: 0px;
  }

  .footer_block_mobile {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 1rem;
  }

  .footer_block {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }

  .footer_logo {
    display: flex;
    width: 120px;
  }

  .footers_footer {
    visibility: hidden;
    height: 0px;
  }

  .footers_footer_mobile {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
    background-color: #0a0b0b;
    opacity: 1;
    visibility: visible;
    height: 100%;
  }

  .opinions {
    padding-left: 1.5rem;
  }

  .footers_footer_mobile ul a {
    font-size: 12px;
    color: rgb(146, 146, 146);
  }

  .footer_block_mobile {
    border-bottom: 1px solid rgba(255, 255, 255, 0.082);
  }

  .footer_moonvalley_grid_mobile {
    visibility: visible;
    opacity: 1;
    display: flex;
    flex-direction: column;
    color: #acacac;
    height: 100%;
  }

  .terms {
    display: flex;
    gap: 2rem;
  }

  .accordeon_tab {
    border-bottom: 1px solid rgba(255, 255, 255, 0.082);
  }

  .accordeon_header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 1.5rem;
    font-size: 18px;
  }

  .accordeon_container {
    overflow-y: hidden;
    transition: all 0.2s ease-in;
    height: 0px;
  }

  .accordeon_content {
    padding: 0.5rem 1.5rem;
  }

  .open {
    height: 100%;
  }

  .closed {
    transition: 0.2s ease;
    transform: rotate(0deg);
  }

  .icon {
    transition: 0.2s ease;
    transform: rotate(-180deg);
  }

  .footer_block_socials {
    display: flex;
    justify-content: center;
    padding-top: 1rem;
    padding-bottom: 1rem;
  }

  .socialIcon {
    width: 35px;
    color: var(--main-color);
  }

  .socialIcon:hover {
    color: var(--opaque-color);
  }

  .payment ul {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .footer_block .about {
    font-size: 18px;
  }
}

